--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,27 @@
+spring.profiles.active: env
+#内嵌TOMCAT应用设置
+server:
+  servlet:
+    context-path: "/eglasses"
+  port: 8092
+#### 数据库设置 ####
 spring:
+  datasource:
+    url: jdbc:mysql://10.8.15.23:63751/cbss2.1.1?useUnicode=true&characterEncoding=UTF-8
+    username: root
+    password: cncYwct2017
+    hikari:
+      minimum-idle: 15
+      maximum-pool-size: 500
   redis:
-    database: 0
-    host: 127.0.0.1
-    port: 6379
-    password:
-    timeout:
+      database: 5
+      host: 127.0.0.1
+      port: 6379
+      timeout: 3000ms
+      jedis:
+        pool:
+          max-idle: 500
+          min-idle: 50
+          max-active: 2000
+          max-wait: 1000ms
 
